cmake_minimum_required(VERSION 3.20)

project(cdemo VERSION 0.0.1 LANGUAGES CXX C)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)

# 遍历src下所有cpp文件
file(GLOB _SOURCES_ ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
add_executable(main ${_SOURCES_})

set_target_properties(main PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/output")